--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "ns3777k@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "doctrine/dbal": "^3.5"
+    }
 }
