--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
-        "doctrine/dbal": "^3.5"
+        "doctrine/dbal": "^3.5",
+        "symfony/cache": "^6.2"
     }
 }
